Additions to ethical analysis

--- a/index.html
+++ b/index.html
@@ -922,9 +922,11 @@
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 									<td class="x">&#10060;</td>
+									<td class="x">&#10060;</td>
 								</tr>
 								<tr class="table-success">
 									<th>Do you ensure that the user’s rights are prioritised, rather than commercial or institutional interests?</th>
+									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
@@ -936,9 +938,11 @@
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
+									<td><i class="fa fa-check"></i></td>
 								</tr>
 								<tr class="table-success">
 									<th>Do you use privacy-by-design principles, and can you describe them clearly and transparently?</th>
+									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
 									<td><i class="fa fa-check"></i></td>
@@ -971,6 +975,7 @@
 									    <td><i class="fa fa-check"></i></td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-success">
 										<th>When the processing of data is necessary other than on the user’s own devices, such as your server or a cloud solution, is collected data not related to an identifiable person?</th>
@@ -978,9 +983,11 @@
 										<td><i class="fa fa-check"></i></td>
 										<td class="x">&#10060;</td>
 										<td><i class="fa fa-check"></i></td>
+										<td><i class="fa fa-check"></i></td>
 									</tr>
 									<tr>
 										<th>Do you use profiling? If so, do you allow the user to influence and determine the values, rules and input that underlie the profiling?</th>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
@@ -992,6 +999,7 @@
 										<td>Patterns</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td>Patterns</td>
 									</tr>
 								</table>
 								</div>
@@ -1020,6 +1028,7 @@
 											<td>European Union</td>
 											<td>European Union</td>
 											<td>France</td>
+											<td>Unclear</td>
 										</tr>
 										<tr class="table-success">
 											<th>Where is the storage solutions provider headquartered?</th>
@@ -1027,9 +1036,11 @@
 											<td>Not specified</td>
 											<td>Brussels, Belgium</td>
 											<td>Paris</td>
+											<td>Unclear</td>
 										</tr>
 										<tr>
 											<th>Does the transmission of data go through countries outside of the EU?</th>
+											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
@@ -1041,9 +1052,11 @@
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
+											<td class="x">&#10060;</td>
 										</tr>
 										<tr>
 											<th>Do you use personal data to influence user behaviour?</th>
+											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
@@ -1055,6 +1068,7 @@
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
+											<td class="x">&#10060;</td>
 										</tr>
 										<tr>
 											<th>Do you ensure that the design does not create addiction and thus influences the person’s self-determination and empowerment?</th>
@@ -1062,9 +1076,11 @@
 											<td><i class="fa fa-check"></i></td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
+											<td><i class="fa fa-check"></i></td>
 										</tr>
 										<tr class="table-success">
 											<th>Do you operate with open source software, so others can use it and possibly develop it further?</th>
+											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
 											<td class="x">&#10060;</td>
@@ -1097,11 +1113,13 @@
 										<td>Data is collected through an anonymous survey</td>
 										<td>Not applicable</td>
 										<td>No need</td>
+										<td>Data is submitted by the 57 participating States of the Organization for Security and Co-operation in Europe (OSCE), civil society and international organizations. Descriptions of crimes and incidents are anonymized before pubblication.</td>
 									</tr>
 									<tr class="table-success">
 										<th>Do you use end-to-end encryption of data?</th>
 										<td><i class="fa fa-check"></i></td>
 										<td><i class="fa fa-check"></i></td>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 									</tr>
@@ -1111,9 +1129,11 @@
 										<td><i class="fa fa-check"></i></td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-success">
 										<th>Do you use zero knowledge as a design principle?</th>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
@@ -1125,9 +1145,11 @@
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-success">
 										<th>Do you sell data as personal identifiable data?</th>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
@@ -1139,9 +1161,11 @@
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-success">
 										<th>If you sell data, are you making sure that it is fully anonymised information only describing patterns, not individuals?</th>
+										<td>Not applicable</td>
 										<td>Not applicable</td>
 										<td>Not applicable</td>
 										<td>Not applicable</td>
@@ -1153,9 +1177,11 @@
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-success">
 										<th>Does this include SoMe (social media) cookies and SoMe logins?</th>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
@@ -1167,9 +1193,11 @@
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-success">
 										<th>If you use third-party cookies, are your users fully aware that your cookie use leads to sharing of data about your users with third parties and do they agree with it?</th>
+										<td>Not applicable</td>
 										<td>Not applicable</td>
 										<td>Not applicable</td>
 										<td>Not applicable</td>
@@ -1181,9 +1209,11 @@
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td class="x">&#10060;</td>
 									</tr>
 									<tr class="table-success">
 										<th>Does this enrichment occur in response to, or in cooperation with, your users?</th>
+										<td>Not applicable</td>
 										<td>Not applicable</td>
 										<td>Not applicable</td>
 										<td>Not applicable</td>
@@ -1192,6 +1222,7 @@
 									<tr>
 										<th>Do you have an individual or a department responsible for the ethical managing of data?</th>
 										<td><i class="fa fa-check"></i></td>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
@@ -1216,10 +1247,12 @@
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
+										<td class="x">&#10060;</td>
 									</tr>
 									<tr>
 										<th>Do you require and control the data ethics of your subcontractors and partners?</th>
 										<td><i class="fa fa-check"></i></td>
+										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
 										<td class="x">&#10060;</td>
