small additions to ethical analysis

--- a/index.html
+++ b/index.html
@@ -1233,6 +1233,7 @@
 										<td>The organization assures privacy and personal data protection, ensures that data collection, processing, and usage are transparent and understandable, and that data practices do not discriminate or disproportionately harm certain groups.</td>
 										<td>ILGA-Europe follows an ethical framework that prioritizes transparency, fairness, and privacy. This includes clear communication about data sources, obtaining informed consent, and reducing bias</td>
 										<td>Ethical guidelines are embedded in the European Commission's practices</td>
+										<td>The OSCE ensures data ethics by adhering to strict standards of data collection, verification, and transparency</td>
 									</tr>
 									<tr>
 										<th>How do you ensure that your data ethics guidelines are respected?</th>
@@ -1240,6 +1241,7 @@
 										<td>Data are collected through a fully anonymized online survey that prevents individuals' identification. Practices are compliant with current EU regulations.</td>
 										<td>ILGA-Europe ensures respect for data ethics through regular audits, staff training, stakeholder engagement, and oversight by an ethics committee</td>
 										<td>Audits, training, and compliance checks</td>
+										<td>Compliance with data ethics guidelines is maintained through rigorous verification processes, collaboration with trusted partners, and adherence to OSCE policies on data protection and responsible reporting.</td>
 									</tr>
 									<tr class="table-success">
 										<th>Can the processing of data be audited by an independent third party?</th>
