--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 									<th></th>
 									<td><strong>Discrimination in the EU</strong></td>
 									<td><strong>EU LGBTIQ Survey III</strong></td>
-									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 									<td><strong>Laws And Families</strong></td>
 									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
@@ -289,7 +289,7 @@
 									<th></th>
 									<td><strong>Discrimination in the EU</strong></td>
 									<td><strong>EU LGBTIQ Survey III</strong></td>
-									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 									<td><strong>Laws And Families</strong></td>
 									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
@@ -318,7 +318,7 @@
 										<th></th>
 										<td><strong>Discrimination in the EU</strong></td>
 										<td><strong>EU LGBTIQ Survey III</strong></td>
-										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 										<td><strong>Laws And Families</strong></td>
 										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
@@ -347,7 +347,7 @@
 										<th></th>
 										<td><strong>Discrimination in the EU</strong></td>
 										<td><strong>EU LGBTIQ Survey III</strong></td>
-										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 										<td><strong>Laws And Families</strong></td>
 										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
@@ -399,7 +399,7 @@
 									<th></th>
 									<td><strong>Discrimination in the EU</strong></td>
 									<td><strong>EU LGBTIQ Survey III</strong></td>
-									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 									<td><strong>Laws And Families</strong></td>
 									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
@@ -563,7 +563,7 @@
 									<th></th>
 									<td><strong>Discrimination in the EU</strong></td>
 									<td><strong>EU LGBTIQ Survey III</strong></td>
-									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 									<td><strong>Laws And Families</strong></td>
 									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
@@ -625,7 +625,7 @@
 										<th></th>
 										<td><strong>Discrimination in the EU</strong></td>
 										<td><strong>EU LGBTIQ Survey III</strong></td>
-										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 										<td><strong>Laws And Families</strong></td>
 										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
@@ -694,7 +694,7 @@
 										<th></th>
 										<td><strong>Discrimination in the EU</strong></td>
 										<td><strong>EU LGBTIQ Survey III</strong></td>
-										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 										<td><strong>Laws And Families</strong></td>
 										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
@@ -763,7 +763,7 @@
 										<th></th>
 										<td><strong>Discrimination in the EU</strong></td>
 										<td><strong>EU LGBTIQ Survey III</strong></td>
-										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 										<td><strong>Laws And Families</strong></td>
 										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
@@ -849,7 +849,7 @@
 										<th></th>
 										<td><strong>Discrimination in the EU</strong></td>
 										<td><strong>EU LGBTIQ Survey III</strong></td>
-										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 										<td><strong>Laws And Families</strong></td>
 										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
@@ -912,7 +912,7 @@
 									<th></th>
 									<td><strong>Discrimination in the EU</strong></td>
 									<td><strong>EU LGBTIQ Survey III</strong></td>
-									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 									<td><strong>Laws And Families</strong></td>
 									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
@@ -965,7 +965,7 @@
 										<th></th>
 										<td><strong>Discrimination in the EU</strong></td>
 										<td><strong>EU LGBTIQ Survey III</strong></td>
-										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 										<td><strong>Laws And Families</strong></td>
 										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
@@ -1018,7 +1018,7 @@
 											<th></th>
 											<td><strong>Discrimination in the EU</strong></td>
 											<td><strong>EU LGBTIQ Survey III</strong></td>
-											<td><strong>Rainbow Europe</strong></td>
+											<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 											<td><strong>Laws And Families</strong></td>
 											<td><strong>OSCE Hate Crime Report</strong></td>
 										</tr>
@@ -1103,7 +1103,7 @@
 										<th></th>
 										<td><strong>Discrimination in the EU</strong></td>
 										<td><strong>EU LGBTIQ Survey III</strong></td>
-										<td><strong>Rainbow Europe</strong></td>
+										<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 										<td><strong>Laws And Families</strong></td>
 										<td><strong>OSCE Hate Crime Report</strong></td>
 									</tr>
@@ -1275,7 +1275,7 @@
 									<th></th>
 									<td><strong>Discrimination in the EU</strong></td>
 									<td><strong>EU LGBTIQ Survey III</strong></td>
-									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 									<td><strong>Laws And Families</strong></td>
 									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
@@ -1359,7 +1359,7 @@
 									<th></th>
 									<td><strong>Discrimination in the EU</strong></td>
 									<td><strong>EU LGBTIQ Survey III</strong></td>
-									<td><strong>Rainbow Europe</strong></td>
+									<td><strong>Rainbow Europe: Marriage and adoption, Laws against hate crimes</strong></td>
 									<td><strong>Laws And Families</strong></td>
 									<td><strong>OSCE Hate Crime Report</strong></td>
 								</tr>
@@ -2290,7 +2290,7 @@
 		<p>
 			<em>The Organization for Security and Co-operation in Europe (OSCE)</em> offers information on 57 States from Europe, Central Asia and North America. We focused on hate crimes reported in european countries in the years from 2016 to 2023.</p>
 		<p>The linechart below shows how the number of incidents increases or dicreases through the years in individual countries, while a map is provided as a comparison tool.</p>	
-        <p>These representations are based on the data reported by OSCE: instances of zero cases of hate crimes reported is due countries not reporting data to OSCE Office for Democratic Institutions and Human Rights (ODIHR).</p>
+        <p>These representations are based on the data reported by OSCE: the ammount of case of hate crimes per year depends on weather countries and organizations reported data to OSCE Office for Democratic Institutions and Human Rights (ODIHR).</p>
 		
 		<div class="nav nav-tabs" id="nav-tab" role="tablist">
 			  <button class="nav-link active" id="nav-first-tab" data-bs-toggle="tab" data-bs-target="#nav-first" type="button" role="tab" aria-controls="nav-first" aria-selected="true">Incidents per country</button>
